# GG-843 Add filter for tables, scroll by Y.

--- a/modules/control-center-web/src/main/js/public/stylesheets/style.scss
+++ b/modules/control-center-web/src/main/js/public/stylesheets/style.scss
@@ -727,7 +727,7 @@ button.form-control {
     margin: 15px 30px;
 }
 
-.metadata-scrollable {
+.scrollable-y {
     overflow-x: hidden;
     overflow-y: auto;
 }
