--- a/modules/control-center-web/src/main/js/views/configuration/metadata-load.jade
+++ b/modules/control-center-web/src/main/js/views/configuration/metadata-load.jade
@@ -44,7 +44,7 @@ mixin chk(mdl, change, tip)
                         tbody
                             tr
                                 td(colspan='2')
-                                    .metadata-scrollable(style='height: 184px')
+                                    .scrollable-y(style='height: 184px')
                                         table.table-modal-striped(id='metadataSchemaData')
                                             tbody
                                                 tr(ng-repeat='schema in displayedSchemas')
