IGNITE-843 WIP spinners.

--- a/modules/control-center-web/src/main/js/views/configuration/metadata-load.jade
+++ b/modules/control-center-web/src/main/js/views/configuration/metadata-load.jade
@@ -73,7 +73,7 @@ mixin chk(mdl, change, tip)
                     tbody
                         tr
                             td(colspan='3')
-                                .metadata-scrollable(style='height: 146px')
+                                .scrollable-y(style='height: 146px')
                                     table.table-modal-striped(id='metadataTableData')
                                         tbody
                                             tr(ng-repeat='table in displayedTables')
