--- a/modules/control-center-web/src/main/js/views/templates/layout.jade
+++ b/modules/control-center-web/src/main/js/views/templates/layout.jade
@@ -38,14 +38,14 @@ html(ng-app='ignite-web-control-center' ng-init='user = #{JSON.stringify(user)};
 
             script(src='//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js')
 
-            script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js')
-            script(src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-sanitize.min.js')
-            script(src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-animate.min.js')
+            script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js')
+            script(src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular-sanitize.min.js')
+            script(src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular-animate.min.js')
 
             script(src='//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.3.1/angular-strap.js')
             script(src='//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.3.1/angular-strap.tpl.min.js')
 
-            script(src='//cdnjs.cloudflare.com/ajax/libs/angular-smart-table/2.1.2/smart-table.js')
+            script(src='//cdnjs.cloudflare.com/ajax/libs/angular-smart-table/2.1.3/smart-table.js')
 
             script(src='//cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/ace.js')
             script(src='//angular-ui.github.io/ui-ace/dist/ui-ace.min.js')
@@ -54,6 +54,9 @@ html(ng-app='ignite-web-control-center' ng-init='user = #{JSON.stringify(user)};
             script(src='//cdn.rawgit.com/wix/angular-tree-control/master/angular-tree-control.js')
 
             script(src='//cdn.rawgit.com/facultymatt/angular-unsavedChanges/develop/dist/unsavedChanges.min.js')
+
+            script(src='//cdnjs.cloudflare.com/ajax/libs/angular-spinner/0.7.0/angular-spinner.min.js')
+            script(src='//cdnjs.cloudflare.com/ajax/libs/angular-spinner/0.7.0/angular-spinner.min.js')
 
             script(src='/common-module.js')
             script(src='/data-structures.js')
