IGNITE-843 WIP spinners.

--- a/modules/control-center-web/src/main/js/views/configuration/metadata-load.jade
+++ b/modules/control-center-web/src/main/js/views/configuration/metadata-load.jade
@@ -21,7 +21,7 @@ mixin chk(mdl, change, tip)
 
 .modal.center(role='dialog')
     .modal-dialog
-        .modal-content
+        .modal-content(us-spinner spinner-key='load-spinner')
             #errors-container.modal-header.header
                 button.close(type='button' ng-click='$hide()' aria-hidden='true') &times;
                 h4.modal-title Load metadata from database
