IGNITE-843 WIP spinners.

--- a/modules/control-center-web/src/main/js/views/templates/layout.jade
+++ b/modules/control-center-web/src/main/js/views/templates/layout.jade
@@ -55,7 +55,7 @@ html(ng-app='ignite-web-control-center' ng-init='user = #{JSON.stringify(user)};
 
             script(src='//cdn.rawgit.com/facultymatt/angular-unsavedChanges/develop/dist/unsavedChanges.min.js')
 
-            script(src='//cdnjs.cloudflare.com/ajax/libs/angular-spinner/0.7.0/angular-spinner.min.js')
+            script(src='//cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js')
             script(src='//cdnjs.cloudflare.com/ajax/libs/angular-spinner/0.7.0/angular-spinner.min.js')
 
             script(src='/common-module.js')
