--- a/modules/control-center-web/src/main/js/views/templates/layout.jade
+++ b/modules/control-center-web/src/main/js/views/templates/layout.jade
@@ -28,7 +28,7 @@ html(ng-app='ignite-web-control-center' ng-init='user = #{JSON.stringify(user)};
             link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/angular-motion/0.4.2/angular-motion.min.css')
             link(rel='stylesheet', href='//cdn.rawgit.com/wix/angular-tree-control/master/css/tree-control.css')
             link(rel='stylesheet', href='//cdn.rawgit.com/wix/angular-tree-control/master/css/tree-control-attribute.css')
-
+            link(rel='stylesheet'  href='//rawgithub.com/darthwade/angular-loading/master/angular-loading.css')
             link(rel='stylesheet', href='/stylesheets/style.css')
 
         block scripts
@@ -56,7 +56,7 @@ html(ng-app='ignite-web-control-center' ng-init='user = #{JSON.stringify(user)};
             script(src='//cdn.rawgit.com/facultymatt/angular-unsavedChanges/develop/dist/unsavedChanges.min.js')
 
             script(src='//cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js')
-            script(src='//cdnjs.cloudflare.com/ajax/libs/angular-spinner/0.7.0/angular-spinner.min.js')
+            script(src='//rawgithub.com/darthwade/angular-loading/master/angular-loading.min.js')
 
             script(src='/common-module.js')
             script(src='/data-structures.js')
