IGNITE-843 WIP spinner on page load.

--- a/modules/control-center-web/src/main/js/public/stylesheets/style.scss
+++ b/modules/control-center-web/src/main/js/public/stylesheets/style.scss
@@ -1433,6 +1433,10 @@ a {
     padding: 5px;
 }
 
+.page-loading-overlay {
+    background-color: rgba(255, 255, 255, 1) !important;
+}
+
 .loading-indicator {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
