--- a/modules/control-center-web/src/main/js/views/configuration/metadata.jade
+++ b/modules/control-center-web/src/main/js/views/configuration/metadata.jade
@@ -26,19 +26,21 @@ block content
         h1 Create and Configure Cache Type Metadata
         hr
     .docs-body(ng-controller='metadataController')
-        +block-callout('{{screenTip.workflowTitle}}', 'joinTip(screenTip.workflowContent)', '{{screenTip.whatsNextTitle}}', 'joinTip(screenTip.whatsNextContent)')
-        +main-table('Types metadata:', 'metadatas', 'metadataName', 'selectItem(row)', '{{$index + 1}}) {{row.valueType}}')
-        .padding-top-dflt(bs-affix)
-            .panel-tip-container(data-placement='bottom' bs-tooltip data-title='Create new metadata')
-                button.btn.btn-primary(id='new-item' ng-click='createItem()') New
-            .panel-tip-container(bs-tooltip data-title='Load new metadata from database' data-placement='bottom')
-                button.btn.btn-primary(ng-click='showLoadMetadataModal()') Load from database
-            +save-remove-buttons('metadata')
-            //label {{ui.formTitle}}
-            br
-            hr
-        form.form-horizontal(name='ui.inputForm' ng-if='backupItem' ng-submit='ui.noSubmit()' novalidate unsaved-warning-form)
-            .panel-group(bs-collapse ng-model='panels.activePanels' data-allow-multiple='true')
-                +groups('metadata', 'backupItem')
-            .section
-                +save-remove-buttons('metadata')
+        div(dw-loading='loadingMetadataScreen' dw-loading-options='{className: "page-loading-overlay", text: "Loading metadata screen..."}')
+            div(ng-show='metadatas')
+                +block-callout('{{screenTip.workflowTitle}}', 'joinTip(screenTip.workflowContent)', '{{screenTip.whatsNextTitle}}', 'joinTip(screenTip.whatsNextContent)')
+                +main-table('Types metadata:', 'metadatas', 'metadataName', 'selectItem(row)', '{{$index + 1}}) {{row.valueType}}')
+                .padding-top-dflt(bs-affix)
+                    .panel-tip-container(data-placement='bottom' bs-tooltip data-title='Create new metadata')
+                        button.btn.btn-primary(id='new-item' ng-click='createItem()') New
+                    .panel-tip-container(bs-tooltip data-title='Load new metadata from database' data-placement='bottom')
+                        button.btn.btn-primary(ng-click='showLoadMetadataModal()') Load from database
+                    +save-remove-buttons('metadata')
+                    //label {{ui.formTitle}}
+                    br
+                    hr
+                form.form-horizontal(name='ui.inputForm' ng-if='backupItem' ng-submit='ui.noSubmit()' novalidate unsaved-warning-form)
+                    .panel-group(bs-collapse ng-model='panels.activePanels' data-allow-multiple='true')
+                        +groups('metadata', 'backupItem')
+                    .section
+                        +save-remove-buttons('metadata')
