--- a/modules/control-center-web/src/main/js/public/stylesheets/style.scss
+++ b/modules/control-center-web/src/main/js/public/stylesheets/style.scss
@@ -592,6 +592,10 @@ button.form-control {
         width: 100%;
     }
 
+    input[type="text"] {
+        font-weight: normal;
+    }
+
     tbody {
         border-left: 10px solid transparent;
     }
