--- a/modules/control-center-web/src/main/js/views/settings/profile.jade
+++ b/modules/control-center-web/src/main/js/views/settings/profile.jade
@@ -34,11 +34,11 @@ block container
                         .details-row
                             +lbl('User name:')
                             .col-xs-5.col-sm-4
-                                input.form-control(type='text' ng-model='profileUser.username' placeholder='Input name' required)
+                                input.form-control(id='profile-username' type='text' ng-model='profileUser.username' placeholder='Input name' required auto-focus)
                         .details-row
                             +lbl('Email:')
                             .col-xs-5.col-sm-4
-                                input.form-control(type='email' ng-model='profileUser.email' placeholder='you@domain.com' required)
+                                input.form-control(id='profile-email' type='email' ng-model='profileUser.email' placeholder='you@domain.com' required)
                         .details-row
                             +lbl('Security token:')
                             label {{profileUser.token}}
