--- a/modules/control-center-web/src/main/js/views/reset.jade
+++ b/modules/control-center-web/src/main/js/views/reset.jade
@@ -17,7 +17,7 @@
 extends templates/layout
 
 block container
-    .row(ng-init='token = #{JSON.stringify(token)}; error=#{JSON.stringify(error)}')
+    .row(ng-init='email = #{JSON.stringify(email)}; token = #{JSON.stringify(token)}; error=#{JSON.stringify(error)}')
         .text-center(ng-if='!token')
             p Further instructions for password reset have been sent to your e-mail address.
         .text-center(ng-if='error')
@@ -25,8 +25,8 @@ block container
         div(ng-controller='auth' ng-if='token && !error')
             form.form-horizontal(name='resetForm' ng-init='reset_info.token = token')
                 .settings-row
-                    label.col-sm-1 Token:
-                    label {{::token}}
+                    label.col-sm-1 E-mail:
+                    label {{::email}}
                 .settings-row
                     label.col-sm-1.required Password:
                     .col-sm-3
