--- a/modules/control-center-web/src/main/js/views/templates/clone.jade
+++ b/modules/control-center-web/src/main/js/views/templates/clone.jade
@@ -19,7 +19,7 @@
         .modal-content
             .modal-header
                 button.close(type='button' ng-click='$hide()') &times;
-                h4.modal-title Copy
+                h4.modal-title Clone
             form.form-horizontal(name='ui.inputForm' novalidate)
                 .modal-body.row
                     .col-sm-9.login.col-sm-offset-1
