--- a/modules/control-center-web/src/main/js/public/stylesheets/style.scss
+++ b/modules/control-center-web/src/main/js/public/stylesheets/style.scss
@@ -904,21 +904,21 @@ button.form-control {
 }
 
 .tooltip.top .tooltip-arrow {
-    border-top-color: $brand-primary;
+    border-top-color: $ignite-block-callout-left;
 }
 
 .tooltip.right .tooltip-arrow {
-    border-right-color: $brand-primary;
+    border-right-color: $ignite-block-callout-left;
 }
 
 .tooltip.bottom .tooltip-arrow {
-    border-bottom-color: $brand-primary;
+    border-bottom-color: $ignite-block-callout-left;
 }
 
 .tooltip > .tooltip-inner {
     max-width: 400px;
     text-align: left;
-    background-color: $brand-primary;
+    background-color: $ignite-block-callout-left;
 }
 
 .popover-content {
