--- a/modules/control-center-web/src/main/js/public/stylesheets/style.scss
+++ b/modules/control-center-web/src/main/js/public/stylesheets/style.scss
@@ -19,9 +19,7 @@
 
 $logo-path: "https://www.filepicker.io/api/file/QagunjDGRFul2JgNCAli";
 $input-height: 28px;
-$ignite-block-callout-left: #248fb2;
 $ignite-block-callout-left-background: #f4f8fa;
-$ignite-block-callout-right: #50af51;
 $ignite-block-callout-right-background: #f3f8f3;
 $ignite-block-callout-gradient-to: #ffffff;
 $ignite-placeholder-color: #999999;
@@ -904,21 +902,21 @@ button.form-control {
 }
 
 .tooltip.top .tooltip-arrow {
-    border-top-color: $ignite-block-callout-left;
+    border-top-color: $brand-info;
 }
 
 .tooltip.right .tooltip-arrow {
-    border-right-color: $ignite-block-callout-left;
+    border-right-color: $brand-info;
 }
 
 .tooltip.bottom .tooltip-arrow {
-    border-bottom-color: $ignite-block-callout-left;
+    border-bottom-color: $brand-info;
 }
 
 .tooltip > .tooltip-inner {
     max-width: 400px;
     text-align: left;
-    background-color: $ignite-block-callout-left;
+    background-color: $brand-info;
 }
 
 .popover-content {
@@ -1273,14 +1271,14 @@ a {
     @extend .block-callout;
 
     background: linear-gradient(to right, $ignite-block-callout-left-background, $ignite-block-callout-gradient-to);
-    border-color: $ignite-block-callout-left;
+    border-color: $brand-info;
 
     i {
-        color: $ignite-block-callout-left;
+        color: $brand-info;
     }
 
     label {
-        color: $ignite-block-callout-left;
+        color: $brand-info;
     }
 }
 
@@ -1288,14 +1286,14 @@ a {
     @extend .block-callout;
 
     background: linear-gradient(to right, $ignite-block-callout-right-background, $ignite-block-callout-gradient-to);
-    border-color: $ignite-block-callout-right;
+    border-color: $brand-success;
 
     i {
-        color: $ignite-block-callout-right;
+        color: $brand-success;
     }
 
     label {
-        color: $ignite-block-callout-right;
+        color: $brand-success;
     }
 }
 
