--- a/modules/control-center-web/src/main/js/public/stylesheets/_bootstrap-variables.scss
+++ b/modules/control-center-web/src/main/js/public/stylesheets/_bootstrap-variables.scss
@@ -43,7 +43,7 @@ $brand-danger:          #d9534f !default;
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-$body-bg:               #fff !default;
+$body-bg:               #f9f9f9 !default;
 //** Global text color on `<body>`.
 $text-color:            $gray-dark !default;
 
