IGNITE-843 Implemented batch load for metadata.

--- a/modules/control-center-web/src/main/js/views/templates/batch-confirm.jade
+++ b/modules/control-center-web/src/main/js/views/templates/batch-confirm.jade
@@ -20,13 +20,13 @@
             .modal-header
                 button.close(type='button' ng-click='cancel()' aria-hidden='true') &times;
                 h4.modal-title Confirmation
-            .modal-body(ng-show='content')
-                p(ng-bind-html='content' style='text-align: center;')
+            .modal-body(ng-show='batchConfirm.content')
+                p(ng-bind-html='batchConfirm.content' style='text-align: center')
             .modal-footer
                 .checkbox.labelField
                     label
-                        input(type='checkbox' ng-model='ui.forAll')
+                        input(type='checkbox' ng-model='batchConfirm.applyToAll')
                         | Apply to all
-                button.btn.btn-default(id='batch-confirm-btn-cancel' type='button' ng-click='batchConfirmCancel()') Cancel
-                button.btn.btn-default(id='batch-confirm-btn-cancel' type='button' ng-click='batchConfirmSkip()') Skip
-                button.btn.btn-primary(id='batch-confirm-btn-overwrite' type='button' ng-click='batchConfirmOverwrite()') Overwrite
+                button.btn.btn-default(id='batch-confirm-btn-cancel' type='button' ng-click='batchConfirm.cCancel()') Cancel
+                button.btn.btn-default(id='batch-confirm-btn-cancel' type='button' ng-click='batchConfirm.skip()') Skip
+                button.btn.btn-primary(id='batch-confirm-btn-overwrite' type='button' ng-click='batchConfirm.overwrite()') Overwrite
