--- a/modules/control-center-web/src/main/js/public/stylesheets/style.scss
+++ b/modules/control-center-web/src/main/js/public/stylesheets/style.scss
@@ -463,6 +463,10 @@ button.form-control {
             opacity: 1;
         }
 
+        .ace_hidden-cursors {
+            opacity: 1;
+        }
+
         .ace_gutter-cell, .ace_folding-enabled > .ace_gutter-cell {
             padding-right: 5px;
         }
@@ -923,6 +927,22 @@ button.form-control {
         position: absolute;
         top: 5px;
         right: 5px;
+    }
+}
+
+.theme-line .popover.cache-metadata {
+    @extend .popover.settings;
+
+    min-width: 305px;
+
+    > .popover-content {
+        overflow: scroll;
+
+        min-height: 400px;
+        max-height: 400px;
+
+        min-width: 300px;
+        max-width: 300px;
     }
 }
 
@@ -1470,4 +1490,20 @@ button.dropdown-toggle {
 ::-webkit-scrollbar-track {
     background-color: white;
     border-radius: 8px;
+}
+
+treecontrol.tree-classic {
+    > ul > li {
+        padding: 0;
+    }
+
+    li.tree-expanded i.tree-branch-head,  li.tree-collapsed i.tree-branch-head {
+        background: none;
+        padding-left: 0;
+    }
+
+    li .tree-selected {
+        background-color: white;
+        font-weight: normal;
+    }
 }
