--- a/modules/control-center-web/src/main/js/views/sql/cache-metadata.jade
+++ b/modules/control-center-web/src/main/js/views/sql/cache-metadata.jade
@@ -11,18 +11,10 @@
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-.popover.settings(tabindex='-1' style='width: 400px')
+.popover.cache-metadata(tabindex='-1' dw-loading='loadingCacheMetadata' dw-loading-options='{text: ""}' ng-init='tryLoadMetadata(cache)')
     .arrow
-    h3.popover-title(style='color: black') Refresh rate
-    button.close(id='paragraph-rate-close' type='button' ng-click='$hide()') &times;
+    h3.popover-title(style='color: black') Cache metadata
+    button.close(id='cache-metadata-close' type='button' ng-click='$hide()') &times;
     .popover-content
-        treecontrol.tree-classic(tree-model='cache.meta' options='treeOptions' selected-node='node1') employee: {{node.name}} age {{node.age}})
-        //form(name='popoverForm')
-        //    .form-group(style='margin: 0; padding: 5px')
-        //        .col-sm-4(style='padding: 0')
-        //            input.form-control(id='paragraph-rate' ng-init='value = paragraph.rate.value' ng-model='value' type='number' required auto-focus)
-        //        .col-sm-8(style='padding-left: 5px; padding-right: 0')
-        //            button.form-control(id='paragraph-unit' ng-init='unit = paragraph.rate.unit' ng-model='unit' required placeholder='Time unit' bs-select bs-options='item.value as item.label for item in timeUnit' tabindex='0')
-        //    .form-actions(style='margin-top: 30px; padding: 5px')
-        //        button.btn.btn-primary(id='paragraph-rate-start' ng-disabled='popoverForm.$invalid' type='button' ng-click='startRefresh(paragraph, value, unit); $hide()') Start
-        //        button.btn.btn-primary.btn-default(id='paragraph-rate-stop' type='button' ng-click='stopRefresh(paragraph); $hide()') Stop
+        treecontrol.tree-classic(tree-model='cache.metadata' options='treeOptions')
+            a(ng-dblclick='dblclickMetadata(node)') {{node.name}}
