# GG-843 Added cache metadata popover.

--- a/modules/control-center-web/src/main/js/public/stylesheets/style.scss
+++ b/modules/control-center-web/src/main/js/public/stylesheets/style.scss
@@ -944,6 +944,10 @@ button.form-control {
         min-width: 300px;
         max-width: 300px;
     }
+
+    label.clickable {
+        cursor: pointer;
+    }
 }
 
 .theme-line .popover.validation-error {
