--- a/modules/control-center-web/src/main/js/views/sql/sql.jade
+++ b/modules/control-center-web/src/main/js/views/sql/sql.jade
@@ -74,7 +74,7 @@ block container
                             .panel-collapse(role='tabpanel' bs-collapse-target)
                                 .col-sm-12(ng-show='paragraph.editor')
                                     .col-xs-8.col-sm-9(style='border-right: 1px solid #eee')
-                                        .sql-editor(ui-ace='{onLoad: aceInit, theme: "chrome", mode: "sql", require: ["ace/ext/language_tools"],' +
+                                        .sql-editor(ui-ace='{onLoad: aceInit(paragraph), theme: "chrome", mode: "sql", require: ["ace/ext/language_tools"],' +
                                             'advanced: {enableSnippets: false, enableBasicAutocompletion: true, enableLiveAutocompletion: true}}'
                                         ng-model='paragraph.query'
                                         ng-class='{"disable": paragraph.status == "RUNNING" || paragraph.status == "PENDING" }')
