--- a/modules/control-center-web/src/main/js/views/settings/profile.jade
+++ b/modules/control-center-web/src/main/js/views/settings/profile.jade
@@ -41,7 +41,7 @@ block container
                                 input.form-control(id='profile-email' type='email' ng-model='profileUser.email' placeholder='you@domain.com' required)
                         .details-row
                             +lbl('Security token:')
-                            a(ng-click-copy='{{profileUser.token}}' bs-tooltip data-title='The security token is used for authorization of web agent.<br/>Click to copy security token to clipboard') {{profileUser.token}}
+                            a(ng-click-copy='{{profileUser.token}}' bs-tooltip data-title='The security token is used for authorization of web agent.<br/>Click to copy security token to clipboard.' data-placement='bottom') {{profileUser.token}}
                             i.tipLabel.fa.fa-refresh(ng-click='generateToken()' bs-tooltip data-title='Generate random security token')
                         .details-row
                             .advanced-options
