# GG-843 Minor fix.

--- a/modules/control-center-web/src/main/js/views/sql/cache-metadata.jade
+++ b/modules/control-center-web/src/main/js/views/sql/cache-metadata.jade
@@ -22,3 +22,4 @@
             label(ng-if='node.type == "indexes"') {{node.name}}
             label(ng-if='node.type == "index"') {{node.name}}
             label(ng-if='node.type == "index-field"') {{node.name}} [{{node.order ? 'ASC' : 'DESC'}}]
+    h3.popover-footer Double click to paste into editor
